Travis build: Update Documentation under travis build : 1389

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 <html>
-<title>Open Programmable Acceleration Engine</title>
+<title>Open Programmable Acceleration Engine
+</title>
 <body>
 <ul>
 
