--- a/index.html
+++ b/index.html
@@ -1,21 +1,13 @@
-
 <html>
-<title>Open Programmable Acceleration Engine
-</title>
+<title>Open Programmable Acceleration Engine</title>
 <body>
 <ul>
 
-  <li><a href="_images/index.html"></a></li>
-
-  <li><a href="docs/index.html"></a></li>
-
   <li><a href="0.13.0/index.html"></a></li>
 
-  <li><a href="_sources/index.html"></a></li>
+  <li><a href="latest/index.html"></a></li>
 
-  <li><a href="_static/index.html"></a></li>
-
-  <li><a href="mpf/index.html"></a></li>
+  <li><a href="0.9.0/index.html"></a></li>
 
 </ul>
 </body>
