--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <body>
 <ul>
 
-  <li><a href="0.13.0/index.html"></a></li>
+  <li><a href="0.13.0/index.html">0.13.0</a></li>
 
-  <li><a href="latest/index.html"></a></li>
+  <li><a href="latest/index.html">latest</a></li>
 
-  <li><a href="0.9.0/index.html"></a></li>
+  <li><a href="0.9.0/index.html">0.9.0</a></li>
 
 </ul>
 </body>
