--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
+
 <html>
-<title>Open Programmable Acceleration Engine</title>
+<title>Open Programmable Acceleration Engine
+</title>
 <body>
+<h1>Open Programmable Acceleration Engine</h1>
 <ul>
 
   <li><a href="0.13.0/index.html">0.13.0</a></li>
 
-  <li><a href="latest/index.html">latest</a></li>
-
   <li><a href="0.9.0/index.html">0.9.0</a></li>
+
+  <li><a href="latest/index.html">latest</a></li>
 
 </ul>
 </body>
