Travis build: Update Documentation under travis build : 1478

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <title>Open Programmable Acceleration Engine
 </title>
-<body>
+<body bgcolor='#85C1E9'>
 <h1>Open Programmable Acceleration Engine</h1>
 <ul>
 
