Travis build: Update Documentation under travis build : 1480

--- a/latest/genindex.html
+++ b/latest/genindex.html
@@ -186,12 +186,62 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
- <a href="#F"><strong>F</strong></a>
+ <a href="#C"><strong>C</strong></a>
+ | <a href="#D"><strong>D</strong></a>
+ | <a href="#F"><strong>F</strong></a>
+ | <a href="#I"><strong>I</strong></a>
+ | <a href="#L"><strong>L</strong></a>
+ | <a href="#M"><strong>M</strong></a>
+ | <a href="#N"><strong>N</strong></a>
+ | <a href="#O"><strong>O</strong></a>
+ | <a href="#P"><strong>P</strong></a>
+ | <a href="#R"><strong>R</strong></a>
+ | <a href="#U"><strong>U</strong></a>
  
 </div>
+<h2 id="C">C</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv210cache_line">cache_line (C++ class)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N10cache_line4uintE">cache_line::uint (C++ member)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#c.CACHELINE_ALIGNED_ADDR">CACHELINE_ALIGNED_ADDR (C macro)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#c.CL">CL (C macro)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#c.CSR_AFU_DSM_BASEH">CSR_AFU_DSM_BASEH (C macro)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#c.CSR_AFU_DSM_BASEL">CSR_AFU_DSM_BASEL (C macro)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#c.CSR_CFG">CSR_CFG (C macro)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#c.CSR_CTL">CSR_CTL (C macro)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#c.CSR_DST_ADDR">CSR_DST_ADDR (C macro)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#c.CSR_NUM_LINES">CSR_NUM_LINES (C macro)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#c.CSR_SRC_ADDR">CSR_SRC_ADDR (C macro)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="D">D</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#c.DSM_STATUS_TEST_COMPLETE">DSM_STATUS_TEST_COMPLETE (C macro)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="F">F</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#c.FME_SYSFS_INJECT_ERROR">FME_SYSFS_INJECT_ERROR (C macro)</a>
+</li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv216FPGA_ACCELERATOR">FPGA_ACCELERATOR (C++ enumerator)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv225FPGA_ACCELERATOR_ASSIGNED">FPGA_ACCELERATOR_ASSIGNED (C++ enumerator)</a>
@@ -298,10 +348,10 @@
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv214fpgaGetUmsgPtr11fpga_handlePP8uint64_t">fpgaGetUmsgPtr (C++ function)</a>
 </li>
-      <li><a href="docs/fpga_api/fpga_api.html#_CPPv211fpgaMapMMIO11fpga_handle8uint32_tPP8uint64_t">fpgaMapMMIO (C++ function)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv211fpgaMapMMIO11fpga_handle8uint32_tPP8uint64_t">fpgaMapMMIO (C++ function)</a>
+</li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv28fpgaOpen10fpga_tokenP11fpga_handlei">fpgaOpen (C++ function)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv217fpgaPrepareBuffer11fpga_handle8uint64_tPPvP8uint64_ti">fpgaPrepareBuffer (C++ function)</a>
@@ -409,6 +459,82 @@
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv215fpgaWriteMMIO3211fpga_handle8uint32_t8uint64_t8uint32_t">fpgaWriteMMIO32 (C++ function)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv215fpgaWriteMMIO6411fpga_handle8uint32_t8uint64_t8uint64_t">fpgaWriteMMIO64 (C++ function)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="I">I</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv222inject_ras_fatal_error10fpga_token7uint8_t">inject_ras_fatal_error (C++ function)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="L">L</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#c.LOG2_CL">LOG2_CL (C macro)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#c.LPBK1_BUFFER_ALLOCATION_SIZE">LPBK1_BUFFER_ALLOCATION_SIZE (C macro)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#c.LPBK1_BUFFER_SIZE">LPBK1_BUFFER_SIZE (C macro)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#c.LPBK1_DSM_SIZE">LPBK1_DSM_SIZE (C macro)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="M">M</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv24mainiA_Pc">main (C++ function)</a>, <a href="docs/fpga_api/fpga_api.html#_CPPv24mainiA_Pc">[1]</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#c.MB">MB (C macro)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="N">N</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#c.NLB0_AFUID">NLB0_AFUID (C macro)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="O">O</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#c.ON_ERR_GOTO">ON_ERR_GOTO (C macro)</a>, <a href="docs/fpga_api/fpga_api.html#c.ON_ERR_GOTO">[1]</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="P">P</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv29print_errPKc11fpga_result">print_err (C++ function)</a>, <a href="docs/fpga_api/fpga_api.html#_CPPv29print_errPKc11fpga_result">[1]</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="R">R</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv216ras_inject_error">ras_inject_error (C++ class)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="U">U</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv26usleepj">usleep (C++ function)</a>, <a href="docs/fpga_api/fpga_api.html#_CPPv26usleepj">[1]</a>
 </li>
   </ul></td>
 </tr></table>
