Travis build: Update Documentation under travis build : 1596

--- a/latest/genindex.html
+++ b/latest/genindex.html
@@ -346,6 +346,8 @@
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv217fpgaGetProperties10fpga_tokenP15fpga_properties">fpgaGetProperties (C++ function)</a>
 </li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv227fpgaGetPropertiesFromHandle11fpga_handleP15fpga_properties">fpgaGetPropertiesFromHandle (C++ function)</a>
+</li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv214fpgaGetUmsgPtr11fpga_handlePP8uint64_t">fpgaGetUmsgPtr (C++ function)</a>
 </li>
   </ul></td>
