Travis build: Update Documentation under travis build : 1598

--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 
 <html>
+<head>
+<link rel="stylesheet"
+ href="https://opae.github.io/latest/_static/css/theme.css"
+  type="text/css"/>
 <title>Open Programmable Acceleration Engine
 </title>
-<body bgcolor='#85C1E9'>
-<h1>Open Programmable Acceleration Engine</h1>
-<ul>
+</head>
+<body style="background-color: white">
+<div class="section" style="background-color: white; padding: 50px;
+ position: absolute; left: 50%; margin-right: -50%;
+  transform: translate(-50%, 0%) ">
+
+<h1>Open Programmable Acceleration Engine - Documentation</h1>
+
+<hr/>
+
+<p>Please select one of the links below to browse the online OPAE
+ documentation:</p>
+
+<ul style="font-size: large; font-weight: bold">
+
+  
+  <li><a href="0.9.0/index.html">0.9.0</a></li>
 
   <li><a href="0.13.0/index.html">0.13.0</a></li>
 
@@ -12,10 +30,10 @@
 
   <li><a href="0.14.0/index.html">0.14.0</a></li>
 
-  <li><a href="0.9.0/index.html">0.9.0</a></li>
-
   <li><a href="latest/index.html">latest</a></li>
 
+
 </ul>
+</div>
 </body>
 </html>
