Travis build: Update Documentation under travis build : 1638

--- a/latest/genindex.html
+++ b/latest/genindex.html
@@ -303,6 +303,10 @@
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv217FPGA_RECONF_ERROR">FPGA_RECONF_ERROR (C++ enumerator)</a>
 </li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv217fpga_reconf_flags">fpga_reconf_flags (C++ type)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv217FPGA_RECONF_FORCE">FPGA_RECONF_FORCE (C++ enumerator)</a>
+</li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv211fpga_result">fpga_result (C++ type)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv210fpga_token">fpga_token (C++ type)</a>
@@ -349,10 +353,10 @@
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv227fpgaGetPropertiesFromHandle11fpga_handleP15fpga_properties">fpgaGetPropertiesFromHandle (C++ function)</a>
 </li>
-      <li><a href="docs/fpga_api/fpga_api.html#_CPPv214fpgaGetUmsgPtr11fpga_handlePP8uint64_t">fpgaGetUmsgPtr (C++ function)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv214fpgaGetUmsgPtr11fpga_handlePP8uint64_t">fpgaGetUmsgPtr (C++ function)</a>
+</li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv211fpgaMapMMIO11fpga_handle8uint32_tPP8uint64_t">fpgaMapMMIO (C++ function)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv28fpgaOpen10fpga_tokenP11fpga_handlei">fpgaOpen (C++ function)</a>
