Travis build: Update Documentation under travis build : 1642

--- a/latest/genindex.html
+++ b/latest/genindex.html
@@ -251,6 +251,8 @@
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv227FPGA_ACCELERATOR_UNASSIGNED">FPGA_ACCELERATOR_UNASSIGNED (C++ enumerator)</a>
 </li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv213FPGA_BUF_BIND">FPGA_BUF_BIND (C++ enumerator)</a>
+</li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv221FPGA_BUF_PREALLOCATED">FPGA_BUF_PREALLOCATED (C++ enumerator)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv214FPGA_BUF_QUIET">FPGA_BUF_QUIET (C++ enumerator)</a>
@@ -302,10 +304,6 @@
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv215fpga_properties">fpga_properties (C++ type)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv217FPGA_RECONF_ERROR">FPGA_RECONF_ERROR (C++ enumerator)</a>
-</li>
-      <li><a href="docs/fpga_api/fpga_api.html#_CPPv217fpga_reconf_flags">fpga_reconf_flags (C++ type)</a>
-</li>
-      <li><a href="docs/fpga_api/fpga_api.html#_CPPv217FPGA_RECONF_FORCE">FPGA_RECONF_FORCE (C++ enumerator)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv211fpga_result">fpga_result (C++ type)</a>
 </li>
