--- a/latest/genindex.html
+++ b/latest/genindex.html
@@ -251,6 +251,8 @@
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv227FPGA_ACCELERATOR_UNASSIGNED">FPGA_ACCELERATOR_UNASSIGNED (C++ enumerator)</a>
 </li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv213FPGA_BUF_BIND">FPGA_BUF_BIND (C++ enumerator)</a>
+</li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv221FPGA_BUF_PREALLOCATED">FPGA_BUF_PREALLOCATED (C++ enumerator)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv214FPGA_BUF_QUIET">FPGA_BUF_QUIET (C++ enumerator)</a>
@@ -349,10 +351,10 @@
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv227fpgaGetPropertiesFromHandle11fpga_handleP15fpga_properties">fpgaGetPropertiesFromHandle (C++ function)</a>
 </li>
-      <li><a href="docs/fpga_api/fpga_api.html#_CPPv214fpgaGetUmsgPtr11fpga_handlePP8uint64_t">fpgaGetUmsgPtr (C++ function)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv214fpgaGetUmsgPtr11fpga_handlePP8uint64_t">fpgaGetUmsgPtr (C++ function)</a>
+</li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv211fpgaMapMMIO11fpga_handle8uint32_tPP8uint64_t">fpgaMapMMIO (C++ function)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv28fpgaOpen10fpga_tokenP11fpga_handlei">fpgaOpen (C++ function)</a>
