Travis build: Update Documentation under travis build : 2195

--- a/latest/genindex.html
+++ b/latest/genindex.html
@@ -825,9 +825,9 @@
 </li>
       <li><a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpga5types13shared_buffer7handle_E">opae::fpga::types::shared_buffer::handle_ (C++ member)</a>
 </li>
-      <li><a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2NK4opae4fpga5types13shared_buffer4iovaEv">opae::fpga::types::shared_buffer::iova (C++ function)</a>
+      <li><a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2NK4opae4fpga5types13shared_buffer10io_addressEv">opae::fpga::types::shared_buffer::io_address (C++ function)</a>
 </li>
-      <li><a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpga5types13shared_buffer5iova_E">opae::fpga::types::shared_buffer::iova_ (C++ member)</a>
+      <li><a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpga5types13shared_buffer11io_address_E">opae::fpga::types::shared_buffer::io_address_ (C++ member)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpga5types13shared_buffer4len_E">opae::fpga::types::shared_buffer::len_ (C++ member)</a>
 </li>
