Travis build: Update Documentation under travis build : 2438

--- a/latest/genindex.html
+++ b/latest/genindex.html
@@ -365,10 +365,10 @@
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv217fpgaGetProperties10fpga_tokenP15fpga_properties">fpgaGetProperties (C++ function)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv227fpgaGetPropertiesFromHandle11fpga_handleP15fpga_properties">fpgaGetPropertiesFromHandle (C++ function)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv214fpgaGetUmsgPtr11fpga_handlePP8uint64_t">fpgaGetUmsgPtr (C++ function)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv211fpgaMapMMIO11fpga_handle8uint32_tPP8uint64_t">fpgaMapMMIO (C++ function)</a>
@@ -413,6 +413,8 @@
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv223fpgaPropertiesGetParentK15fpga_propertiesP10fpga_token">fpgaPropertiesGetParent (C++ function)</a>
 </li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv224fpgaPropertiesGetSegmentK15fpga_propertiesP8uint16_t">fpgaPropertiesGetSegment (C++ function)</a>
+</li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv225fpgaPropertiesGetSocketIDK15fpga_propertiesP7uint8_t">fpgaPropertiesGetSocketID (C++ function)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv225fpgaPropertiesGetVendorIDK15fpga_propertiesP8uint16_t">fpgaPropertiesGetVendorID (C++ function)</a>
@@ -452,6 +454,8 @@
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv227fpgaPropertiesSetObjectType15fpga_properties12fpga_objtype">fpgaPropertiesSetObjectType (C++ function)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv223fpgaPropertiesSetParent15fpga_properties10fpga_token">fpgaPropertiesSetParent (C++ function)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv224fpgaPropertiesSetSegment15fpga_properties8uint16_t">fpgaPropertiesSetSegment (C++ function)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv225fpgaPropertiesSetSocketID15fpga_properties7uint8_t">fpgaPropertiesSetSocketID (C++ function)</a>
 </li>
