Travis build: Update Documentation under travis build : 2479

--- a/latest/genindex.html
+++ b/latest/genindex.html
@@ -719,10 +719,10 @@
 </li>
       <li><a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpga5types10properties11bbs_versionE">opae::fpga::types::properties::bbs_version (C++ member)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpga5types10properties3busE">opae::fpga::types::properties::bus (C++ member)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2NK4opae4fpga5types10properties6c_typeEv">opae::fpga::types::properties::c_type (C++ function)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpga5types10properties12capabilitiesE">opae::fpga::types::properties::capabilities (C++ member)</a>
@@ -764,6 +764,8 @@
       <li><a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpga5types10properties6props_E">opae::fpga::types::properties::props_ (C++ member)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpga5types10properties5ptr_tE">opae::fpga::types::properties::ptr_t (C++ type)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpga5types10properties7segmentE">opae::fpga::types::properties::segment (C++ member)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpga5types10properties9socket_idE">opae::fpga::types::properties::socket_id (C++ member)</a>
 </li>
