Travis build: Update Documentation under travis build : 2568

--- a/latest/genindex.html
+++ b/latest/genindex.html
@@ -188,9 +188,12 @@
 
 <div class="genindex-jumpbox">
  <a href="#A"><strong>A</strong></a>
+ | <a href="#B"><strong>B</strong></a>
  | <a href="#C"><strong>C</strong></a>
  | <a href="#D"><strong>D</strong></a>
+ | <a href="#E"><strong>E</strong></a>
  | <a href="#F"><strong>F</strong></a>
+ | <a href="#G"><strong>G</strong></a>
  | <a href="#I"><strong>I</strong></a>
  | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
@@ -209,6 +212,18 @@
   </ul></td>
 </tr></table>
 
+<h2 id="B">B</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv28bdf_info">bdf_info (C++ class)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N8bdf_info3busE">bdf_info::bus (C++ member)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -216,12 +231,28 @@
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#c.CL">CL (C macro)</a>
 </li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv26config">config (C++ class)</a>
+
+      <ul>
+        <li><a href="docs/fpga_api/fpga_api.html#_CPPv26config">(C++ member)</a>
+</li>
+      </ul></li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N6config6targetE">config::target (C++ class)</a>
+
+      <ul>
+        <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N6config6targetE">(C++ member)</a>
+</li>
+      </ul></li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N6config6target3busE">config::target::bus (C++ member)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N6config6target10open_flagsE">config::target::open_flags (C++ member)</a>
+</li>
       <li><a href="docs/fpga_api/fpga_api.html#c.CSR_AFU_DSM_BASEH">CSR_AFU_DSM_BASEH (C macro)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#c.CSR_AFU_DSM_BASEL">CSR_AFU_DSM_BASEL (C macro)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="docs/fpga_api/fpga_api.html#c.CSR_CFG">CSR_CFG (C macro)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#c.CSR_CTL">CSR_CTL (C macro)</a>
@@ -243,9 +274,19 @@
   </ul></td>
 </tr></table>
 
+<h2 id="E">E</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv27err_cnt">err_cnt (C++ member)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="F">F</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv29find_fpga9fpga_guidP10fpga_tokenP8uint32_tP8uint32_t">find_fpga (C++ function)</a>
+</li>
       <li><a href="docs/fpga_api/fpga_api.html#c.FME_SYSFS_INJECT_ERROR">FME_SYSFS_INJECT_ERROR (C macro)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv216FPGA_ACCELERATOR">FPGA_ACCELERATOR (C++ enumerator)</a>
@@ -364,10 +405,10 @@
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv217fpgaGetProperties10fpga_tokenP15fpga_properties">fpgaGetProperties (C++ function)</a>
 </li>
-      <li><a href="docs/fpga_api/fpga_api.html#_CPPv227fpgaGetPropertiesFromHandle11fpga_handleP15fpga_properties">fpgaGetPropertiesFromHandle (C++ function)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv227fpgaGetPropertiesFromHandle11fpga_handleP15fpga_properties">fpgaGetPropertiesFromHandle (C++ function)</a>
+</li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv214fpgaGetUmsgPtr11fpga_handlePP8uint64_t">fpgaGetUmsgPtr (C++ function)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv211fpgaMapMMIO11fpga_handle8uint32_tPP8uint64_t">fpgaMapMMIO (C++ function)</a>
@@ -487,6 +528,18 @@
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv215fpgaWriteMMIO3211fpga_handle8uint32_t8uint64_t8uint32_t">fpgaWriteMMIO32 (C++ function)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv215fpgaWriteMMIO6411fpga_handle8uint32_t8uint64_t8uint64_t">fpgaWriteMMIO64 (C++ function)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="G">G</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv212get_bus_info10fpga_tokenP8bdf_info">get_bus_info (C++ function)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#c.GETOPT_STRING">GETOPT_STRING (C macro)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -910,6 +963,12 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv210parse_argsiA_Pc">parse_args (C++ function)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv214print_bus_infoP8bdf_info">print_bus_info (C++ function)</a>
+</li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv29print_errPKc11fpga_result">print_err (C++ function)</a>, <a href="docs/fpga_api/fpga_api.html#_CPPv29print_errPKc11fpga_result">[1]</a>
 </li>
   </ul></td>
