Travis build: Update Documentation under travis build :

--- a/1.1.0/genindex.html
+++ b/1.1.0/genindex.html
@@ -195,14 +195,10 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
- <a href="#_"><strong>_</strong></a>
- | <a href="#A"><strong>A</strong></a>
- | <a href="#B"><strong>B</strong></a>
+ <a href="#A"><strong>A</strong></a>
  | <a href="#C"><strong>C</strong></a>
  | <a href="#D"><strong>D</strong></a>
- | <a href="#E"><strong>E</strong></a>
  | <a href="#F"><strong>F</strong></a>
- | <a href="#H"><strong>H</strong></a>
  | <a href="#I"><strong>I</strong></a>
  | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
@@ -210,51 +206,13 @@
  | <a href="#O"><strong>O</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#R"><strong>R</strong></a>
- | <a href="#S"><strong>S</strong></a>
- | <a href="#T"><strong>T</strong></a>
  | <a href="#U"><strong>U</strong></a>
- | <a href="#V"><strong>V</strong></a>
- | <a href="#W"><strong>W</strong></a>
  
 </div>
-<h2 id="_">_</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.handle.__enter__">__enter__() (opae.fpga.handle method)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.handle.__exit__">__exit__() (opae.fpga.handle method)</a>
-</li>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.__init__">__init__() (opae.fpga.properties method)</a>
-</li>
-  </ul></td>
-</tr></table>
-
 <h2 id="A">A</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.accelerator_state">accelerator_state (opae.fpga.properties attribute)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.allocate_shared_buffer">allocate_shared_buffer() (in module opae.fpga)</a>
-</li>
       <li><a href="docs/fpga_api/fpga_cxx_api.html#c.ASSERT_FPGA_OK">ASSERT_FPGA_OK (C macro)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="B">B</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.bbs_id">bbs_id (opae.fpga.properties attribute)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.bbs_version">bbs_version (opae.fpga.properties attribute)</a>
-</li>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.bus">bus (opae.fpga.properties attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -264,22 +222,14 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="docs/fpga_api/fpga_api.html#c.CACHELINE_ALIGNED_ADDR">CACHELINE_ALIGNED_ADDR (C macro)</a>
 </li>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.error.can_clear">can_clear (opae.fpga.error attribute)</a>
-</li>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.capabilities">capabilities (opae.fpga.properties attribute)</a>
-</li>
       <li><a href="docs/fpga_api/fpga_api.html#c.CL">CL (C macro)</a>
 </li>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.handle.close">close() (opae.fpga.handle method)</a>
-</li>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.shared_buffer.compare">compare() (opae.fpga.shared_buffer method)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="docs/fpga_api/fpga_api.html#c.CSR_AFU_DSM_BASEH">CSR_AFU_DSM_BASEH (C macro)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#c.CSR_AFU_DSM_BASEL">CSR_AFU_DSM_BASEL (C macro)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="docs/fpga_api/fpga_api.html#c.CSR_CFG">CSR_CFG (C macro)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#c.CSR_CTL">CSR_CTL (C macro)</a>
@@ -296,27 +246,7 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.device">device (opae.fpga.properties attribute)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="docs/fpga_api/fpga_api.html#c.DSM_STATUS_TEST_COMPLETE">DSM_STATUS_TEST_COMPLETE (C macro)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="E">E</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.enumerate">enumerate() (in module opae.fpga)</a>
-</li>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.error">error (class in opae.fpga)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.errors">errors() (in module opae.fpga)</a>
-</li>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.event">event (class in opae.fpga)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -324,8 +254,6 @@
 <h2 id="F">F</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.shared_buffer.fill">fill() (opae.fpga.shared_buffer method)</a>
-</li>
       <li><a href="docs/fpga_api/fpga_api.html#c.FME_SYSFS_INJECT_ERROR">FME_SYSFS_INJECT_ERROR (C macro)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv216FPGA_ACCELERATOR">FPGA_ACCELERATOR (C++ enumerator)</a>
@@ -564,16 +492,6 @@
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv215fpgaWriteMMIO6411fpga_handle8uint32_t8uint64_t8uint64_t">fpgaWriteMMIO64 (C++ function)</a>
 </li>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.function">function (opae.fpga.properties attribute)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="H">H</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.handle">handle (class in opae.fpga)</a>
-</li>
   </ul></td>
 </tr></table>
 
@@ -610,25 +528,13 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="docs/fpga_api/fpga_api.html#c.MB">MB (C macro)</a>
 </li>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.model">model (opae.fpga.properties attribute)</a>
-</li>
   </ul></td>
 </tr></table>
 
 <h2 id="N">N</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.error.name">name (opae.fpga.error attribute)</a>
-</li>
       <li><a href="docs/fpga_api/fpga_api.html#c.NLB0_AFUID">NLB0_AFUID (C macro)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.num_interrupts">num_interrupts (opae.fpga.properties attribute)</a>
-</li>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.num_mmio">num_mmio (opae.fpga.properties attribute)</a>
-</li>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.num_slots">num_slots (opae.fpga.properties attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -636,13 +542,9 @@
 <h2 id="O">O</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.object_id">object_id (opae.fpga.properties attribute)</a>
-</li>
       <li><a href="docs/fpga_api/fpga_api.html#c.ON_ERR_GOTO">ON_ERR_GOTO (C macro)</a>, <a href="docs/fpga_api/fpga_api.html#c.ON_ERR_GOTO">[1]</a>
 </li>
       <li><a href="docs/fpga_api/fpga_cxx_api.html#_CPPv24opae">opae (C++ type)</a>, <a href="docs/fpga_api/fpga_cxx_api.html#_CPPv24opae">[1]</a>, <a href="docs/fpga_api/fpga_cxx_api.html#_CPPv24opae">[2]</a>, <a href="docs/fpga_api/fpga_cxx_api.html#_CPPv24opae">[3]</a>, <a href="docs/fpga_api/fpga_cxx_api.html#_CPPv24opae">[4]</a>, <a href="docs/fpga_api/fpga_cxx_api.html#_CPPv24opae">[5]</a>, <a href="docs/fpga_api/fpga_cxx_api.html#_CPPv24opae">[6]</a>, <a href="docs/fpga_api/fpga_cxx_api.html#_CPPv24opae">[7]</a>
-</li>
-      <li><a href="docs/fpga_api/fpga_python_api.html#module-opae.fpga">opae.fpga (module)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpgaE">opae::fpga (C++ type)</a>, <a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpgaE">[1]</a>, <a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpgaE">[2]</a>, <a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpgaE">[3]</a>, <a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpgaE">[4]</a>, <a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpgaE">[5]</a>, <a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpgaE">[6]</a>, <a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpgaE">[7]</a>
 </li>
@@ -1002,11 +904,7 @@
 </li>
       <li><a href="docs/fpga_api/fpga_cxx_api.html#c.OPAECXX_HERE">OPAECXX_HERE (C macro)</a>
 </li>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.open">open() (in module opae.fpga)</a>
-</li>
       <li><a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2lsRNSt7ostreamERK6guid_t">operator&lt;&lt; (C++ function)</a>, <a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2lsRNSt7ostreamERK6pvalueI1TE">[1]</a>
-</li>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.event.os_object">os_object() (opae.fpga.event method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -1014,13 +912,7 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.parent">parent (opae.fpga.properties attribute)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv29print_errPKc11fpga_result">print_err (C++ function)</a>, <a href="docs/fpga_api/fpga_api.html#_CPPv29print_errPKc11fpga_result">[1]</a>
-</li>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties">properties (class in opae.fpga)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -1030,40 +922,6 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv216ras_inject_error">ras_inject_error (C++ class)</a>
 </li>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.handle.read_csr32">read_csr32() (opae.fpga.handle method)</a>
-</li>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.handle.read_csr64">read_csr64() (opae.fpga.handle method)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.error.read_value">read_value() (opae.fpga.error method)</a>
-</li>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.register_event">register_event() (in module opae.fpga)</a>
-</li>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.handle.reset">reset() (opae.fpga.handle method)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="S">S</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.shared_buffer">shared_buffer (class in opae.fpga)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.shared_buffer.size">size() (opae.fpga.shared_buffer method)</a>
-</li>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.socket_id">socket_id (opae.fpga.properties attribute)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="T">T</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.token">token (class in opae.fpga)</a>
-</li>
   </ul></td>
 </tr></table>
 
@@ -1071,28 +929,6 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv26usleepj">usleep (C++ function)</a>, <a href="docs/fpga_api/fpga_api.html#_CPPv26usleepj">[1]</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="V">V</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.vendor_id">vendor_id (opae.fpga.properties attribute)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="W">W</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.handle.write_csr32">write_csr32() (opae.fpga.handle method)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.handle.write_csr64">write_csr64() (opae.fpga.handle method)</a>
-</li>
-      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.shared_buffer.wsid">wsid() (opae.fpga.shared_buffer method)</a>
 </li>
   </ul></td>
 </tr></table>
